<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/cancellationOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/toolbar_height"
        android:layout_marginEnd="@dimen/space_smedium"
        android:text="@string/cancellation_order"
        android:textSize="@dimen/font_tiny"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/thanksForOrder"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_medium"
        android:fontFamily="sans-serif-medium"
        android:text="@string/thanks_for_order"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/font_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cancellationOrder" />

    <TextView
        android:id="@+id/numberOrder"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/number_order"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/font_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/thanksForOrder"
        app:layout_constraintTop_toBottomOf="@+id/thanksForOrder" />

    <View
        android:id="@+id/horizontalLine1"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="@dimen/space_line"
        android:layout_marginTop="@dimen/space_smedium"
        android:background="@color/grey"
        android:textSize="@dimen/font_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberOrder" />

    <TextView
        android:id="@+id/timeOrderView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_medium"
        android:layout_marginTop="@dimen/space_xsmedium"
        android:text="@string/time_order_view"
        android:textSize="@dimen/font_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalLine1" />

    <TextView
        android:id="@+id/timeOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/space_smedium"
        android:layout_marginRight="@dimen/space_smedium"
        android:text="@string/time_order"
        android:textColor="@color/red"
        android:textSize="@dimen/font_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/timeOrderView" />

    <TextView
        android:id="@+id/numOrderView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_large"
        android:text="@string/num_order_view"
        android:textSize="@dimen/font_small"
        app:layout_constraintStart_toStartOf="@+id/timeOrderView"
        app:layout_constraintTop_toBottomOf="@+id/timeOrderView" />

    <TextView
        android:id="@+id/numOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_order"
        android:textColor="@color/red"
        android:textSize="@dimen/font_small"
        app:layout_constraintEnd_toEndOf="@+id/timeOrder"
        app:layout_constraintTop_toTopOf="@+id/numOrderView" />

    <TextView
        android:id="@+id/sumOrderView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_large"
        android:text="@string/sum_order_view"
        android:textSize="@dimen/font_small"
        app:layout_constraintStart_toStartOf="@+id/numOrderView"
        app:layout_constraintTop_toBottomOf="@+id/numOrderView" />

    <TextView
        android:id="@+id/sumOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sum_order"
        android:textColor="@color/red"
        android:textSize="@dimen/font_small"
        app:layout_constraintEnd_toEndOf="@+id/numOrder"
        app:layout_constraintTop_toTopOf="@+id/sumOrderView" />

    <TextView
        android:id="@+id/timeCompletedView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_large"
        android:text="@string/time_completed_view"
        android:textSize="@dimen/font_small"
        app:layout_constraintStart_toStartOf="@+id/sumOrderView"
        app:layout_constraintTop_toBottomOf="@+id/sumOrderView" />

    <TextView
        android:id="@+id/timeCompleted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_completed"
        android:textColor="@color/red"
        android:textSize="@dimen/font_small"
        app:layout_constraintEnd_toEndOf="@+id/sumOrder"
        app:layout_constraintTop_toTopOf="@+id/timeCompletedView" />

    <View
        android:id="@+id/horizontalLine2"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="@dimen/space_line"
        android:layout_marginTop="@dimen/space_medium"
        android:background="@color/grey"
        android:textSize="@dimen/font_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeCompletedView" />

    <TextView
        android:id="@+id/addressView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_medium"
        android:text="@string/address_view"
        android:textSize="@dimen/font_small"
        app:layout_constraintStart_toStartOf="@+id/timeCompletedView"
        app:layout_constraintTop_toBottomOf="@+id/horizontalLine2" />

    <TextView
        android:id="@+id/addressOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_medium"
        android:fontFamily="sans-serif-medium"
        android:text="@string/address_order"
        android:textColor="@color/black"
        android:textSize="@dimen/font_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/addressView"
        app:layout_constraintTop_toBottomOf="@+id/addressView" />

    <View
        android:id="@+id/horizontalLine3"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="@dimen/space_line"
        android:layout_marginBottom="@dimen/space_smedium"
        android:background="@color/grey"
        app:layout_constraintBottom_toTopOf="@+id/buttonMenu"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonMenu"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_smedium"
        android:layout_marginRight="@dimen/space_smedium"
        android:layout_marginBottom="@dimen/space_smedium"
        android:text="@string/buttonMenu"
        android:textAllCaps="true"
        android:textSize="@dimen/font_medium"
        android:textColor="@color/white"
        app:backgroundTint="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>